<resources>
    <string name="app_name">Smack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_name">user name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="generate_background_color">GENERATE BACKGROUND COLOR</string>
    <string name="create_user">CREATE USER</string>
</resources>
